# explore_langchain

./: .gitignore  README.md  pyproject.toml
notebook/: .env.example  jira_via_api.ipynb  jira_via_module_python.ipynb  langsmith.ipynb  magic-sans-jira.ipynb  magic-sans-jira_langgraph.ipynb  magic-sans-jira_langgraph.py  rag_agent.ipynb  rag_faiss.ipynb  semantic_search_engine.ipynb
notebook/jira/: jira_via_module_python.ipynb  load_jira_with_json.ipynb
notebook/magic-jira/: magic-avec-jira.ipynb  magic-sans-jira.ipynb  magic-sans-jira_langgraph.ipynb
notebook/other/: langsmith.ipynb
notebook/rag/: rag_agent_langgraph.ipynb  rag_faiss.ipynb  semantic_search_engine.ipynb
notebook/referentiel/moon_match/: moon_match_backlog.csv  moon_match_us.json
