[project]
name = "explore-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langchain[openai]>=1.2.6",
    "langgraph>=1.0.6",
    "pypdf>=6.6.0",
]
